# cowell-mvp

./: .env.example  .gitignore  AGENT.md  README.md  Task.md  Walkthrough.md  deploy-aws-cli.md  deploy-aws-console.md  deploy-github-pages.md  docker-compose.yml  requirements.txt
.zcode/plans/: plan-sess_042dde56-3620-4c29-8f36-f8ffdbbfff1e.md  plan-sess_b9f595bb-bb6c-434a-8a82-2665695fda35.md
backend/: Dockerfile  auth_oauth.py  lambda_handler.py  pyproject.toml  test_service_account.py  test_sheets.py  test_sheets_creating.py
backend/app/: config.py  main.py  models.py
backend/app/ocr/: gemini.py  image.py  prompts.py
backend/app/routes/: ocr.py  register.py  rows.py  upload.py
backend/app/sessions/: memory.py
backend/app/sheets/: google_drive.py  google_sheets.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  googleSheets.ts
frontend/src/api/: client.ts
frontend/src/components/: EditableRow.tsx  FileUploadZone.tsx  PhotoPreview.tsx
frontend/src/pages/: DonePage.tsx  EditPage.tsx  ProcessingPage.tsx  UploadPage.tsx
frontend/src/styles/: app.css
frontend/src/types/: index.ts
skills/token-optimized-coding/: SKILL.md
